2008-10-20  Martin Leidig  <mleidig@schlund.de>

	Let generate target fail with BuildException if TargetGeneratorReport
	contains errors.

	* src/de/schlund/pfixcore/util/TargetGeneratorTask.java: throw
	BuildException if TargetGenerator reported errors
	* src/de/schlund/pfixxml/targets/TargetGenerator.java: added
	method to check if TargetGenerator errors occurred
	* src/de/schlund/pfixxml/targets/TargetGenerationReport.java: added
	method to check if TargetGenerator errors were reported

2008-10-20  Martin Leidig <mleidig@schlund.de>

	Added alias "pustefixContext" for the ContextImpl bean (as we require a
	speaking name for Spring-XML-based injection of the Context):
	* src/org/pustefixframework/config/contextxmlservice/parser/ContextXMLParsingHandler.java

	* pom.xml: set version to 0.13.3-SNAPSHOT
	* build.xml: set version to 0.13.3-pre

2008-10-14  Martin Leidig <mleidig@schlund.de>

	Released Pfixcore 0.13.2 

2008-10-11  Martin Leidig <mleidig@schlund.de>

	Improved performance by caching bean references of already
	processed classes and remembering un-annotated classes.
	* src/org/pustefixframework/container/spring/beans/AnnotationBeanDefinitionPostProcessor.java

	Remove server-runtime.xml if startup.properties doesn't exist.
	* startTomcat.sh
	* skel/startTomcat.sh

2008-10-08  Martin Leidig <mleidig@schlund.de>

	Added support for Webapp reloading and Spring application context
	refreshing. Reloading/refreshing can be done via JMX. You can either
	use a JMX client of your choice, like jconsole, or you can use the
	reload.sh and refresh.sh scripts. 

	Added new build mode, which doesn't configure the classes and libraries 
	to be loaded with Tomcat's shared classloader, but with the respective
	WebappClassLoader. This is simply done by making symbolic links from the 
	WEB-INF directories. Building in this mode also activates Tomcat's session
	serialization mechanism, i.e. if data stored in the session (like