@@ -349,7 +349,8 @@
 
   <xs:element name="interceptor" type="prop:interceptorType"/>
   <xs:complexType name="interceptorType">
-	<xs:attribute name="class" type="xs:normalizedString" use="required"/>
+	<xs:attribute name="class" type="xs:normalizedString"/>
+	<xs:attribute name="bean-ref"/>
   </xs:complexType>
   
   
